[tool.poetry]
name = "weatherapi"
version = "0.1.0"
description = "Python client for WeatherAPI.com"
authors = ["Daniil Andreev <d2234@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
attrs = "^21.4"
httpx = "^0.23"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
